--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7158,7 +7158,7 @@ body {
 #content .article .model2 .footer .middle,
 #content article .model2 .footer .right,
 #content .article .model2 .footer .right {
-  width: 33%;
+  width: 43%;
 }
 #content article .model2 .footer .left,
 #content .article .model2 .footer .left {
