--- a/static/less/layout.less
+++ b/static/less/layout.less
@@ -397,7 +397,7 @@ body {
 				.clearfix;
 				.left,
 				.middle,
-				.right{width:33%}
+				.right{width:43%}
 				.left{text-align:left;}
 				.right{text-align:right;}
 				.middle{float:left;text-align:center;}
